@@ -1,5 +1,10 @@
 Changelog for Miosix np embedded OS
 
+- Thread creation no longer calls errorHandler(OUT_OF_MEMORY) if there
+  is no memory to create a thread. This has been done to prevent system
+  reboots when the (kernel) heap is full, especially if a process creates
+  another process.
+- Refactored Thread::createUserspace() to call Thread::doCreate()
 - Added a per-process FileDescriptorTable
 - Added ProcessBase class. The kernel used to have a null pointer as process,
   now it has a ProcessBase instance, and is the only entity that has an
